chore: purekt